# swagger/swagger.yaml
@@ -135,6 +135,10 @@ paths:
           description: Not found
           schema:
             $ref: '#/definitions/ErrorResponse'
+        409:
+          description: Conflict
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         500:
           description: Internal Error
           schema:
